# p9-oc-python

./: README.md  pyproject.toml
books_review/authentication/: forms.py  models.py  urls.py  views.py
books_review/authentication/migrations/: 0001_initial.py
books_review/authentication/templates/: base.html  dashboard.html  header.html  login.html  register.html  subscriptions.html
books_review/books_review/: asgi.py  settings.py  urls.py  wsgi.py
books_review/reviews/: admin.py  forms.py  models.py  urls.py  views.py
books_review/reviews/migrations/: 0001_initial.py
books_review/reviews/templates/reviews/: confirm_delete.html  home.html  review_form.html  ticket_form.html  ticket_review_form.html
