[project]
name = "p9-oc-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Charles DZADU",email = "dzaducharles@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "django-types (>=0.22.0,<0.23.0)",
    "django-stubs-ext (>=5.2.2,<6.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]

[tool.poetry]
packages = [{include = "p9_oc_python", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
